--- a/styleConverTECH.css
+++ b/styleConverTECH.css
@@ -1,85 +1,219 @@
- 
-  /* cabeçalho */  
+ /* cabeçalho */
 
  header {
-    /* background-image: url("https://etap.com/images/default-source/static/etap-21-release/binary-animation.gif?sfvrsn=411527c_2"); */
-    height: 165px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+     /* background-image: url("https://etap.com/images/default-source/static/etap-21-release/binary-animation.gif?sfvrsn=411527c_2"); */
+     height: 165px;
+     display: flex;
+     flex-direction: column;
+     justify-content: space-around;
 
-    background-color: #0f1546a9;
-}
+     background-color: #0f1546a9;
+ }
 
-#titulo {
-    display: flex;
-    justify-content: center;
-    color: white;
-    font-size: 30px;
-    font-family: sans-serif, monospace;
-    font-weight: 500;
-    margin-top: auto;
+ #titulo {
+     display: flex;
+     justify-content: center;
+     color: white;
+     text-shadow: 2px 2px 1px #0c69a7;
+     font-size: 30px;
+     font-family: sans-serif, monospace;
+     font-weight: 500;
+     margin-top: auto;
 
-}
+ }
 
-#botoes {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    height: 45px;
-    background-color: #5994ce9c;
-    margin-block-start: auto;
+ #botoes {
+     display: flex;
+     justify-content: space-around;
+     width: 100%;
+     height: 45px;
+     background-color: #5994ce9c;
+     margin-block-start: auto;
+     cursor: pointer;
+ }
 
-}
+ .botao {
+     cursor: pointer;
+     height: 45px;
+     width: 100%;
+     text-align: center;
+     color: white;
+     background-color: #5994ce96;
+     border: 1px;
+ }
 
-.botao {
-    height: 45px;
-    width: 100%;
-    text-align: center;
-    color: white;
-    background-color: #5994ce96;
-    border: 1px;
-}
-.botao:hover {
-    background-color: #0f154686;
-}
+ .botao:hover {
+     background-color: #0f154686;
+ } 
 
-body {
-    background-color: #0F1546;
-    background-image: url(https://cyfor.co.uk/wp-content/uploads/2023/09/Website-Carousel-Imagery-1800-%C3%97-1000-px-2560-%C3%97-1707-px-1800-x-1000-px.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 0px;
-}
-/* MENU PRINCIPAL*/
-#standard{
-  color: white;
-  font-size: 40px;
-  display: flex;
-  justify-content: center;
-  justify-items: center; 
-  font-family: sans-serif, monospace;
-  
-}
+ body {
+     background-color: #0F1546;
+     background-image: url(https://cyfor.co.uk/wp-content/uploads/2023/09/Website-Carousel-Imagery-1800-%C3%97-1000-px-2560-%C3%97-1707-px-1800-x-1000-px.png);
+     background-repeat: no-repeat;
+     background-size: cover;
+     margin: 0px;
+ }
 
-/* calculadoras */
-main {
-  margin-top: 150px;
-}
+ /* MENU PRINCIPAL*/
+ main {
+     display: flex;
+     height: 705px;
+     width: 100%;
+     justify-content: center;
+     justify-items: center;
+     flex-direction: column;
+     font-family: sans-serif, monospace;
+ }
 
-.hidden {
-    display: none;
-}
+ #standard {
+     color: white;
+     text-shadow: 2px 2px 1px #0c69a7;
+     font-size: 40px;
+     display: flex;
+     justify-content: center;
+     justify-items: center;
+     flex-direction: column;
+     font-family: sans-serif, monospace;
 
-#divConverterBases {
-  width: 700px;
-  height: 500px;
- background-color: rgb(59, 74, 122);
-}
+ }
+
+ .welcome {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+
+ }
+
+ /* calculadoras */
 
 
-footer {
- width: 100%;
- color: white;
+ .hidden {
+     display: none;
+ }
+
+ .texto {
+     font-size: 20px;
+     text-align: center;
+     width: 50%;
+     color: white;
+ }
+
+
+ #divConverterBases {
+     width: 40%;
+     height: 80%;
+     margin: 0 30%;
+     background-color: rgb(44, 59, 109, 0.705);
+     flex-direction: column;
+     justify-content: space-around;
+     align-items: center;
+     border-radius: 15px;
+ }
+
+ #divCalculadoraBases {
+     width: 40%;
+     height: 80%;
+     margin: 0 30%;
+     background-color: rgb(44, 59, 109, 0.705);
+     flex-direction: column;
+     justify-content: space-around;
+     align-items: center;
+     border-radius: 15px;
+ }
+
+
+ #divConverterDados {
+     width: 40%;
+     height: 80%;
+     margin: 0 30%;
+     background-color: rgba(44, 59, 109, 0.705);
+     flex-direction: column;
+     justify-content: space-around;
+     align-items: center;
+     border-radius: 15px;
+
+ }
+
+ main input {
+     width: 50%;
+     height: 30px;
+     text-align: center;
+     font-size: 20px;
+     text-decoration: none;
+     border-radius: 10px;
+ }
+
+ main select {
+     cursor: pointer;
+     width: 50%;
+     height: 30px;
+     text-align: center;
+     font-size: 20px;
+     text-decoration: none;
+     border-radius: 10px;
+ }
+
+ main button {
+     cursor: pointer;
+     height: 30px;
+     text-align: center;
+     font-size: 15px;
+     text-decoration: none;
+     border-radius: 10px;
+ }
  
-}
+
+ #resultadoConversaoBase {
+     background-color: azure;
+     width: 50%;
+     height: 65px;
+     justify-content: center;
+     align-items: center;
+     text-align: center;
+     font-size: 20px;
+     text-decoration: none;
+     border-radius: 10px;
+ }
+
+ #resultadoDados {
+     background-color: azure;
+     width: 50%;
+     height: 65px;
+     justify-content: center;
+     align-items: center;
+     text-align: center;
+     font-size: 20px;
+     text-decoration: none;
+     border-radius: 10px;
+ }
+
+ #resulBaseCalc {
+     background-color: azure;
+     width: 50%;
+     height: 65px;
+     justify-content: center;
+     align-items: center;
+     text-align: center;
+     font-size: 20px;
+     text-decoration: none;
+     border-radius: 10px;
+ }
+
+
+ footer {
+     position: fixed;
+     background-color: #080d3a73;
+     width: 100%;
+     height: 80px;
+     color: white;
+     display: flex;
+     justify-content: center;
+     justify-items: center;
+     text-align: center;
+     flex-direction: column;
+
+ }
+
+ footer hr {
+     width: 30%;
+ }
